--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -4,8 +4,8 @@ on:
   pull_request:
   push:
     branches:
-    - main
-    - tim-epa-fdv
+      - main
+  #    - tim-epa-fdv
   workflow_dispatch:
 
 jobs:
