--- a/.github/workflows/update_Polarion.yml
+++ b/.github/workflows/update_Polarion.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: run Action
-      uses: ichderjens/firstAction/action.yml@main
+      uses: ichderjens/firstAction@1.0
       with:
         project: Mainline_OPB2
   
